fix: alignment of card title to image

--- a/style.css
+++ b/style.css
@@ -317,8 +317,11 @@ button.card {
 	border: none;
 }
 
-.card > h1 > img {
+.card > h1 > * {
 	vertical-align: middle;
+}
+
+.card > h1 > img {
 	height: var(--font-h1-size);
 }
 
